# sensors_algorithms_ws

./: .gitignore  README.md  yolo_landmarks_map.json
src/camera_bringup/: CMakeLists.txt  package.xml
src/camera_bringup/config/: camera_devices.yaml  camera_params.yaml
src/camera_bringup/launch/: cameras.launch.py  full_sensors_algorithms.launch.py  rtabmap_yolo_landmarks.launch.py
src/capra_landolt_msgs/: CMakeLists.txt  package.xml
src/capra_landolt_msgs/msg/: BoundingCircles.msg
src/capra_landolt_ros/: CMakeLists.txt  package.xml
src/capra_landolt_ros/config/: landolt_params.yaml
src/capra_landolt_ros/launch/: landolt_detection.launch.py  landolt_with_usb_camera.launch.py
src/capra_landolt_ros/rviz/: landolt_ros.rviz
src/capra_landolt_ros/src/: landolt_node.cpp
src/fisheye_camera/: CMakeLists.txt  README.md  package.xml
src/fisheye_camera/camera_info/: fisheye_camera.yaml
src/fisheye_camera/config/: camera_params.yaml
src/fisheye_camera/launch/: fisheye_camera.launch.py
src/motion_stability_detector/: CMakeLists.txt  package.xml
src/motion_stability_detector/config/: motion_detector.yaml
src/motion_stability_detector/launch/: motion_detector.launch.py
src/motion_stability_detector/scripts/: motion_detector_node.py
src/qr_detector/: CMakeLists.txt  package.xml
src/qr_detector/config/: qr_detector.yaml
src/qr_detector/launch/: qr_detector.launch.py
src/qr_detector/scripts/: qr_detector_node.py
src/sentinel_sensor_console/: package.xml  setup.cfg  setup.py
src/sentinel_sensor_console/sentinel_sensor_console/: main.py  ros_qt_bridge.py
src/sentinel_sensor_console/sentinel_sensor_console/widgets/: algorithm_results.py  camera_view.py  event_log.py  status_panel.py
src/thermal_camera/: package.xml  setup.py
src/thermal_camera/config/: thermal_camera.yaml
src/thermal_camera/launch/: thermal_camera.launch.py
src/thermal_camera/thermal_camera/: __init__.py  thermal_camera_node.py
src/yolo_playground/: README.md  package.xml  setup.cfg  setup.py
src/yolo_playground/config/: yolo_params.yaml
src/yolo_playground/launch/: yolo_playground.launch.py
src/yolo_playground/models/: README.md
src/yolo_playground/resource/: yolo_playground
src/yolo_playground/yolo_playground/: __init__.py  detection_logger.py  detection_to_tf.py  landmark_saver.py
src/yolo_ros/: pyproject.toml  setup.py
src/yolo_ros/yolo_ros/: debug_node.py
