<?xml version="1.0"?>
<package format="3">
  <name>capra_landolt_msgs</name>
  <version>0.0.1</version>
  <description>Messages for Landolt C detection in ROS 2.</description>

  <maintainer email="sahidsilvany@gmail.com">Sahid</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>