<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fisheye_camera</name>
  <version>0.1.0</version>
  <description>Bringup package for fisheye USB camera with calibration and rectification.</description>
  <maintainer email="user@todo.com">thesamayan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>camera_calibration_parsers</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
