<?xml version="1.0"?>
<package format="3">
  <name>motion_stability_detector</name>
  <version>0.0.1</version>
  <description>ROS 2 Humble package for motion detection and image stability estimation using OpenCV background subtraction.</description>

  <maintainer email="sahidsilvany@gmail.com">Sahid Hernandez</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>